[new] Top page.

--- a/src/web/partial/header.html
+++ b/src/web/partial/header.html
@@ -28,7 +28,9 @@
 <header class="global">
   <div class="headcont">
     <a href="/{{lang}}/"><img class="site-logo" src="/static/img/common/header_logo_docs.png" alt="Monaca Docs" /></a>
-    <nav class="global" data-pjax>
+    
+    
+    <!-- <nav class="global" data-pjax>
       {{{globaltoc}}}
     </nav>
     <p class="version_selector">
@@ -42,6 +44,6 @@
           {{/if}}
         {{/eachProperty}}
       {{/if}}
-    </p>
+    </p> -->
   </div>
 </header>
