--- a/src/web/static/css/_header.scss
+++ b/src/web/static/css/_header.scss
@@ -1,3 +1,216 @@
+/*New UI*/
+
+
+
+header.global {
+    /*background-color: #ffffff;*/
+    color: #333;
+    height: 70px;
+    z-index: 1;
+    position: inherit;
+    top: 50px;
+    left: 0px;
+    width: 100%;
+    @include clearfix-after();
+    a:link {color: $monaca-blue; text-decoration: none;}
+    a:visited {color: $monaca-blue; text-decoration: none;}
+    a:hover {color: $monaca-blue; text-decoration: underline; width: auto;}
+    a:active {color: $monaca-blue; text-decoration: none;}
+
+    .headcont {
+        max-width: 1020px;
+        @include box-sizing(border-box);
+        height: 70px;
+        margin: 0 auto;
+        padding: 0 20px;
+        position: relative;
+    }
+
+    .site-logo {
+        position: absolute;
+        top: 15px;
+        left: 0px;
+        color: white;
+        font-size: 16px;
+        font-weight: 400;
+        height: 32px;
+        line-height: 32px;
+        margin: 0;
+        padding: 12px 0 0 0;
+    }
+}
+
+/*header.global {
+  background-color: #ffffff;
+  border-bottom: 1px solid #c2c0c1;
+  color: #333;
+  height: 70px;
+  z-index: 1;
+  position: inherit;
+  top: 50px;
+  left: 0px;
+  width: 100%;
+  @include clearfix-after();
+  a:link {color: $monaca-blue; text-decoration: none;}
+  a:visited {color: $monaca-blue; text-decoration: none;}
+  a:hover {color: $monaca-blue; text-decoration: underline; width: auto;}
+  a:active {color: $monaca-blue; text-decoration: none;}
+
+  .currentVersion {
+    font-weight: bold;
+    padding: 0 0.25em;
+  }
+
+  .alternativeVersion {
+    padding: 0 0.25em;
+  }
+
+  .headcont {
+    max-width: 1020px;
+    @include box-sizing(border-box);
+    height: 70px;
+    margin: 0 auto;
+    padding: 0 20px;
+    position: relative;
+  }
+  .site-logo {
+    position: absolute;
+    top: 15px;
+    left: 0px;
+    color: white;
+    font-size: 16px;
+    font-weight: 400;
+    height: 32px;
+    line-height: 32px;
+    margin: 0;
+    padding: 12px 0 0 0;
+  }
+  .version_selector {
+    position: absolute;
+    font-family: 'Open Sans', 'ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic ProN W3','Hiragino Kaku Gothic ProN','メイリオ',Meiryo,'ＭＳ Ｐゴシック',sans-serif;
+    top: 35px;
+    right: 20px;
+    select {
+      border-radius: 2px;
+      padding: 4px;
+    }
+  }
+
+  nav.global {
+    position: absolute;
+    top: 0;
+    left: 306px;
+    min-width: 610px;
+    div {
+      > ul {
+        @include clearfix-after;
+        > li {
+          $time: 180ms;
+          background-color: #ffffff;
+          color: white;
+          font-size: 16px;
+          float: left;
+          height: 100%;
+          width: auto;
+          position: relative;
+          text-align: center;
+          &.current {
+            > a {
+              border-bottom: 2px solid $monaca-blue;
+              color: $monaca-blue;
+              &:hover {color: $monaca-blue;}
+              &:visited {color: $monaca-blue;}
+              &:active {color: $monaca-blue;}
+            }
+            &:hover > a {
+              color: white;
+            }
+          }
+          > a {
+            border-bottom: 2px solid transparent;
+            -moz-box-sizing: border-box;
+            box-sizing: border-box;
+            display: inline-block;
+            width: auto;width: auto;
+            height: 69px;
+            line-height: 28px;
+            padding: 23px 13px 0;
+            &:link {color: #333; text-decoration: none;}
+            &:visited {color: #333; text-decoration: none;}
+            &:hover {color: #fff; text-decoration: none;}
+            &:active {color: #333; text-decoration: none;}
+          }
+          ul {
+            background-color: #f9f9f9;
+            border: 1px solid #ccc;
+            top: 70px;
+            left: 0px;
+            width: auto;
+            min-width: 200px;
+            //opacity: 0;
+            position: absolute;
+            text-align: left;
+            visibility: hidden;
+            z-index: 11;
+            -webkit-transition: visibility 0s linear $time, opacity $time;
+            -moz-transition: visibility 0s linear $time, opacity $time;
+            -o-transition: visibility 0s linear $time, opacity $time;
+            transition: visibility 0s linear $time, opacity $time;
+            > li {
+              padding: 0;
+              > a {
+                background-color: #f9f9f9;
+                border-bottom: 1px solid #e0e0e0;
+                display: block;
+                font-size: 16px;
+                line-height: 40px;
+                padding: 0 30px 0 20px;
+                height: 40px;
+                white-space: nowrap;
+                width: auto;
+                &, &:visited, &:hover {
+                  color: #666;
+                  text-decoration: none;
+                }
+              }
+              &:last-child > a {
+                border-bottom: 0px;
+                height: 41px;
+              }
+              &:hover > a {
+                border-bottom: 0px;
+                height: 41px;
+                background-color: $monaca-blue;
+                &, &:visited, &:hover {
+                  color: white;
+                }
+              }
+            }
+          }
+          &:hover {
+            background-color: $monaca-blue;
+            opacity: 1;
+            > a {
+              color: #fff;
+              font-weight: 700;
+            }
+            ul a {
+              font-weight: 400;
+            }
+            > ul {
+              visibility: visible;
+              opacity: 1;
+              @include transition-delay(0);
+            }
+          }
+        }
+      }
+    }
+  }
+}*/
+
+/*==============END of New UI*========================*/
+
 header.navbar {
     position: absolute;
     top: 0;
@@ -377,173 +590,7 @@ html[lang=ja] {
     }
 }
 
-header.global {
-  background-color: #ffffff;
-  border-bottom: 1px solid #c2c0c1;
-  color: #333;
-  height: 70px;
-  z-index: 1;
-  position: inherit;
-  top: 50px;
-  left: 0px;
-  width: 100%;
-  @include clearfix-after();
-  a:link {color: $monaca-blue; text-decoration: none;}
-  a:visited {color: $monaca-blue; text-decoration: none;}
-  a:hover {color: $monaca-blue; text-decoration: underline; width: auto;}
-  a:active {color: $monaca-blue; text-decoration: none;}
 
-  .currentVersion {
-    font-weight: bold;
-    padding: 0 0.25em;
-  }
-
-  .alternativeVersion {
-    padding: 0 0.25em;
-  }
-
-  .headcont {
-    @include box-sizing(border-box);
-    height: 70px;
-    margin: 0 auto;
-    padding: 0 20px;
-    position: relative;
-  }
-  .site-logo {
-    position: absolute;
-    top: 15px;
-    left: 20px;
-    color: white;
-    font-size: 16px;
-    font-weight: 400;
-    height: 32px;
-    line-height: 32px;
-    margin: 0;
-    padding: 12px 0 0 0;
-  }
-  .version_selector {
-    position: absolute;
-    font-family: 'Open Sans', 'ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic ProN W3','Hiragino Kaku Gothic ProN','メイリオ',Meiryo,'ＭＳ Ｐゴシック',sans-serif;
-    top: 35px;
-    right: 20px;
-    select {
-      border-radius: 2px;
-      padding: 4px;
-    }
-  }
-
-  nav.global {
-    position: absolute;
-    top: 0;
-    left: 306px;
-    min-width: 610px;
-    div {
-      > ul {
-        @include clearfix-after;
-        > li {
-          $time: 180ms;
-          background-color: #ffffff;
-          color: white;
-          font-size: 16px;
-          float: left;
-          height: 100%;
-          width: auto;
-          position: relative;
-          text-align: center;
-          &.current {
-            > a {
-              border-bottom: 2px solid $monaca-blue;
-              color: $monaca-blue;
-              &:hover {color: $monaca-blue;}
-              &:visited {color: $monaca-blue;}
-              &:active {color: $monaca-blue;}
-            }
-            &:hover > a {
-              color: white;
-            }
-          }
-          > a {
-            border-bottom: 2px solid transparent;
-            -moz-box-sizing: border-box;
-            box-sizing: border-box;
-            display: inline-block;
-            width: auto;width: auto;
-            height: 69px;
-            line-height: 28px;
-            padding: 23px 13px 0;
-            &:link {color: #333; text-decoration: none;}
-            &:visited {color: #333; text-decoration: none;}
-            &:hover {color: #fff; text-decoration: none;}
-            &:active {color: #333; text-decoration: none;}
-          }
-          ul {
-            background-color: #f9f9f9;
-            border: 1px solid #ccc;
-            top: 70px;
-            left: 0px;
-            width: auto;
-            min-width: 200px;
-            //opacity: 0;
-            position: absolute;
-            text-align: left;
-            visibility: hidden;
-            z-index: 11;
-            -webkit-transition: visibility 0s linear $time, opacity $time;
-            -moz-transition: visibility 0s linear $time, opacity $time;
-            -o-transition: visibility 0s linear $time, opacity $time;
-            transition: visibility 0s linear $time, opacity $time;
-            > li {
-              padding: 0;
-              > a {
-                background-color: #f9f9f9;
-                border-bottom: 1px solid #e0e0e0;
-                display: block;
-                font-size: 16px;
-                line-height: 40px;
-                padding: 0 30px 0 20px;
-                height: 40px;
-                white-space: nowrap;
-                width: auto;
-                &, &:visited, &:hover {
-                  color: #666;
-                  text-decoration: none;
-                }
-              }
-              &:last-child > a {
-                border-bottom: 0px;
-                height: 41px;
-              }
-              &:hover > a {
-                border-bottom: 0px;
-                height: 41px;
-                background-color: $monaca-blue;
-                &, &:visited, &:hover {
-                  color: white;
-                }
-              }
-            }
-          }
-          &:hover {
-            background-color: $monaca-blue;
-            opacity: 1;
-            > a {
-              color: #fff;
-              font-weight: 700;
-            }
-            ul a {
-              font-weight: 400;
-            }
-            > ul {
-              visibility: visible;
-              opacity: 1;
-              @include transition-delay(0);
-            }
-          }
-        }
-      }
-    }
-  }
-}
 
 //Fix navigation width even when mouseon
 html[lang=en] header.global nav > div > ul > li {
