[update] update google custom search support both en and ja

--- a/src/web/partial/sidebar.html
+++ b/src/web/partial/sidebar.html
@@ -4,7 +4,11 @@
   <div class="aside-search">
       <script>
         (function() {
-          var cx = '007288577541380389757:zvd2mhxh88y';
+          {{#is lang "ja"}}
+            var cx = '015817351124918865089:crcrc0a_jj0';
+          {{else}}
+            var cx = '015817351124918865089:vghz5csftuu';
+          {{/is}}
           var gcse = document.createElement('script');
           gcse.type = 'text/javascript';
           gcse.async = true;
