--- a/src/web/static/css/common.css
+++ b/src/web/static/css/common.css
@@ -2174,7 +2174,7 @@ div.sampleapp {
   div.sampleapp p {
     padding-left: 5px;
     padding-right: 15px; }
-  div.sampleapp button {
+  div.sampleapp a, div.sampleapp button {
     margin: 20px 5px 5px 5px;
     font-size: 16px;
     border: 1px solid #373d47;
@@ -2182,6 +2182,11 @@ div.sampleapp {
     color: #fff;
     background-color: #505763;
     padding: 10px 10px 10px 10px; }
+  div.sampleapp a:link {
+    color: #fff; }
+  div.sampleapp a:hover {
+    color: #fff;
+    text-decoration: none; }
   div.sampleapp .column-left,
   div.sampleapp .column-center,
   div.sampleapp .column-right {
