--- a/src/web/static/css/_header.scss
+++ b/src/web/static/css/_header.scss
@@ -56,6 +56,8 @@ header.navbar {
             }
             img {
                 width: 110px;
+                left: 20px;
+                position: absolute;
             }
         }
         .navbar-toggle {
@@ -403,7 +405,7 @@ header.global {
   }
 
   .headcont {
-    @include box-sizing(border-box);
+    box-sizing: border-box;
     height: 70px;
     margin: 0 auto;
     padding: 0 20px;
@@ -536,7 +538,6 @@ header.global {
             > ul {
               visibility: visible;
               opacity: 1;
-              @include transition-delay(0);
             }
           }
         }
