--- a/src/web/static/css/_aside.scss
+++ b/src/web/static/css/_aside.scss
@@ -77,7 +77,8 @@ aside.global {
             padding: 1em 1em 1em 0;
             li {
               color: #5d89cb;
-              line-height: 1.5;
+              line-height: 1.8;
+              left: 5%;
               margin: 0;
               padding: 6px 0 6px $aside-padding;
               position: relative;
