--- a/src/web/static/css/common.css
+++ b/src/web/static/css/common.css
@@ -1316,7 +1316,8 @@ aside.global {
         padding: 1em 1em 1em 0; }
         aside.global nav.aside-main > div > ul > li > ul li {
           color: #5d89cb;
-          line-height: 1.5;
+          line-height: 1.8;
+          left: 5%;
           margin: 0;
           padding: 6px 0 6px 0;
           position: relative; }
