--- a/src/web/static/css/common.css
+++ b/src/web/static/css/common.css
@@ -1260,6 +1260,32 @@ a.scrollup {
   a.scrollup:active {
     background: url(../img/common/btn_top_active.png) no-repeat; }
 
+aside.top-page {
+  float: right;
+  font-size: 16px;
+  padding: 15px 0px 40px 0px;
+  width: 288px;
+  box-sizing: border-box; }
+  aside.top-page div.aside-search {
+    padding: 0;
+    margin-right: 15px; }
+  aside.top-page .gsc-input-box {
+    height: 30px; }
+  aside.top-page div.aside-search .cse .gsc-control-cse, aside.top-page .gsc-control-cse {
+    padding: 0;
+    width: auto; }
+  aside.top-page div.aside-search .gsib_a {
+    width: 100%;
+    padding: 5px 6px 3px; }
+  aside.top-page div.aside-search .cse .gsc-search-button input.gsc-search-button-v2, aside.top-page input.gsc-search-button-v2 {
+    width: 56px;
+    height: 30px;
+    padding: 4px 18px 4px 18px;
+    min-width: 13px;
+    margin-top: 5px;
+    margin-right: 5px;
+    background-color: #5d89cb; }
+
 aside.global {
   float: right;
   font-size: 16px;
@@ -1288,10 +1314,11 @@ aside.global {
     padding: 4px 18px 4px 18px;
     min-width: 13px;
     margin-top: 5px;
-    margin-right: 5px; }
+    margin-right: 5px;
+    background-color: #5d89cb; }
   aside.global nav.aside-main {
     background-color: #f2f2f2;
-    padding-right: 0;
+    /*padding-right: 10px;*/
     padding-left: 10px;
     padding-bottom: 20px;
     margin-right: 20px; }
@@ -1306,20 +1333,21 @@ aside.global {
       border-bottom: 1px solid #ccc; }
     aside.global nav.aside-main > div > ul {
       margin-left: 0;
-      padding-top: 10px; }
+      padding-top: 10px;
+      /*padding-right: 10px;*/ }
       aside.global nav.aside-main > div > ul > li > a {
         color: #444;
         text-decoration: none;
         font-weight: bold;
         padding: 10px; }
       aside.global nav.aside-main > div > ul > li > ul {
-        padding: 1em 1em 1em 0; }
+        padding: 1em 10px 1em 0; }
         aside.global nav.aside-main > div > ul > li > ul li {
           color: #5d89cb;
           line-height: 1.8;
           left: 5%;
           margin: 0;
-          padding: 6px 0 6px 0;
+          padding: 6px 2px 6px 0;
           position: relative; }
           aside.global nav.aside-main > div > ul > li > ul li a:link, aside.global nav.aside-main > div > ul > li > ul li a:visited {
             color: #5d89cb;
@@ -1354,6 +1382,8 @@ aside.global {
             text-decoration: none; }
             aside.global nav.aside-main > div > ul > li > ul li.current > a, aside.global nav.aside-main > div > ul > li > ul li.current > a:link, aside.global nav.aside-main > div > ul > li > ul li.current > a:hover, aside.global nav.aside-main > div > ul > li > ul li.current > a:visited {
               color: white; }
+          aside.global nav.aside-main > div > ul > li > ul li > ul {
+            padding: 1em 10px 1em 0; }
       aside.global nav.aside-main > div > ul > li li {
         font-size: 1.3rem;
         padding-top: 8px;
