--- a/src/web/partial/sidebar.html
+++ b/src/web/partial/sidebar.html
@@ -5,9 +5,12 @@
       <script>
         (function() {
           {{#is lang "ja"}}
-            var cx = '015817351124918865089:crcrc0a_jj0';
+            // var classx = '015817351124918865089:crcrc0a_jj0';
+            var classx = '007288577541380389757:mty_rw-k5qy';
+            			  
           {{else}}
-            var cx = '015817351124918865089:vghz5csftuu';
+            // var cx = '015817351124918865089:vghz5csftuu';
+            var cx ="007288577541380389757:dbehy9uu97o";
           {{/is}}
           var gcse = document.createElement('script');
           gcse.type = 'text/javascript';
