[test] test live search for google custom search

--- a/src/web/partial/header.html
+++ b/src/web/partial/header.html
@@ -53,11 +53,12 @@
       <div class="aside-search">
         <script>
           (function() {
-            {{#is lang "ja"}}
-              var cx = '015817351124918865089:crcrc0a_jj0';
-            {{else}}
-              var cx = '015817351124918865089:vghz5csftuu';
-            {{/is}}
+            // {{#is lang "ja"}}
+            //   var cx = '015817351124918865089:crcrc0a_jj0';
+            // {{else}}
+            //   var cx = '015817351124918865089:vghz5csftuu';
+            // {{/is}}
+            var cx = (LANG === "ja") ? "007288577541380389757:mty_rw-k5qy" : " 007288577541380389757:dbehy9uu97o";
             var gcse = document.createElement('script');
             gcse.type = 'text/javascript';
             gcse.async = true;
