--- a/src/web/partial/sidebar.html
+++ b/src/web/partial/sidebar.html
@@ -4,20 +4,24 @@
   <div class="aside-search">
       <script>
         (function() {
-          {{#is lang "ja"}}
+        	var cx = (LANG === "ja") ? "007288577541380389757:mty_rw-k5qy" : " 007288577541380389757:dbehy9uu97o";
+        	
+          //{{#is lang "ja"}}
             // var classx = '015817351124918865089:crcrc0a_jj0';
-            var classx = '007288577541380389757:mty_rw-k5qy';
-            			  
-          {{else}}
+            // if (LANG == "ja")
+            // 	var classx = '007288577541380389757:mty_rw-k5qy';
+            // else
+            // 	var cx ="007288577541380389757:dbehy9uu97o";	
+          // {{else}}
             // var cx = '015817351124918865089:vghz5csftuu';
-            var cx ="007288577541380389757:dbehy9uu97o";
-          {{/is}}
-          var gcse = document.createElement('script');
-          gcse.type = 'text/javascript';
-          gcse.async = true;
-          gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
-          var s = document.getElementsByTagName('script')[0];
-          s.parentNode.insertBefore(gcse, s);
+            
+          // {{/is}}
+			var gcse = document.createElement('script');
+			gcse.type = 'text/javascript';
+			gcse.async = true;
+			gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+			var s = document.getElementsByTagName('script')[0];
+			s.parentNode.insertBefore(gcse, s);
         })();
       </script>
       <gcse:search style="padding: 0"></gcse:search>
