--- a/src/web/partial/sidebar.html
+++ b/src/web/partial/sidebar.html
@@ -4,8 +4,9 @@
   <div class="aside-search">
       <script>
         (function() {
+
         	var cx = (LANG === "ja") ? "007288577541380389757:mty_rw-k5qy" : " 007288577541380389757:dbehy9uu97o";
-        	
+        	console.log('sidebar: ' + LANG + '-' + cx);
           //{{#is lang "ja"}}
             // var classx = '015817351124918865089:crcrc0a_jj0';
             // if (LANG == "ja")
