--- a/src/web/partial/sidebar.html
+++ b/src/web/partial/sidebar.html
@@ -1,39 +1,25 @@
 
 <aside class="global">
+  	<div class="aside-search">
+      	<script>
+        	(function() {
+	        	var cx = (LANG === "ja") ? "007288577541380389757:mty_rw-k5qy" : " 007288577541380389757:dbehy9uu97o";
+	        	console.log('sidebar: ' + LANG + '-' + cx);
+				var gcse = document.createElement('script');
+				gcse.type = 'text/javascript';
+				gcse.async = true;
+				gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+				var s = document.getElementsByTagName('script')[0];
+				s.parentNode.insertBefore(gcse, s);
+        	})();
+      	</script>
+      	<gcse:search style="padding: 0"></gcse:search>
+  	</div>
   
-  <div class="aside-search">
-      <script>
-        (function() {
-
-        	var cx = (LANG === "ja") ? "007288577541380389757:mty_rw-k5qy" : " 007288577541380389757:dbehy9uu97o";
-        	console.log('sidebar: ' + LANG + '-' + cx);
-          //{{#is lang "ja"}}
-            // var classx = '015817351124918865089:crcrc0a_jj0';
-            // if (LANG == "ja")
-            // 	var classx = '007288577541380389757:mty_rw-k5qy';
-            // else
-            // 	var cx ="007288577541380389757:dbehy9uu97o";	
-          // {{else}}
-            // var cx = '015817351124918865089:vghz5csftuu';
-            
-          // {{/is}}
-			var gcse = document.createElement('script');
-			gcse.type = 'text/javascript';
-			gcse.async = true;
-			gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
-			var s = document.getElementsByTagName('script')[0];
-			s.parentNode.insertBefore(gcse, s);
-        })();
-      </script>
-      <gcse:search style="padding: 0"></gcse:search>
-    <!-- <input type="text" id="searchbox" placeholder="{{#is lang "en"}}Input Your Keywords{{else}}キーワードを入力してください{{/is}}">
-    <span class="button" id="aside-search-clear" style="display: none"></span> -->
-  </div>
-  
-  <nav class="aside-main">
-    <div class="aside-search-result-info" style="display: none"></div>
-    <div id="spinner" class="spinner" style="display:none;margin-top:50%;margin-left:50%;"></div>
-      {{{toctree}}}
-    </div>
-  </nav>
+  	<nav class="aside-main">
+    	<div class="aside-search-result-info" style="display: none"></div>
+    	<div id="spinner" class="spinner" style="display:none;margin-top:50%;margin-left:50%;">
+      	{{{toctree}}}
+    	</div>
+  	</nav>
 </aside>
