--- a/src/web/layout/layout.html
+++ b/src/web/layout/layout.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1200" />
+    <link rel="icon" type="image/png" href="/static/img/index/favicon.png"/>
 
     {{#if fjson.title}}
         <title>{{{fjson.title}}} - Monaca Docs</title>
