--- a/src/web/layout/layout.html
+++ b/src/web/layout/layout.html
@@ -11,6 +11,9 @@
         <title>Monaca Docs - Cloud-powered Cordova Dev Platform</title>
     {{/if}}
 
+    <script src="/static/js/tooltip.js"></script>
+    <link rel="stylesheet" href="/static/css/tooltip.css" type="text/css" />
+
     <script src="/static/js/jquery.min.js"></script>
     <link rel="stylesheet" href="/static/css/bootstrap.min.css" type="text/css" />
     <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.4.0/moment.min.js"></script>
@@ -99,16 +102,72 @@
         {{> sidebar }}
     {{/if}}
 
+    <!-- FEEDBACK DIALOG -->
+	<div style="display:none;">
+	    <div id="demo3_tip">
+	        <form action="" method="post">
+	        	<table width="50%">
+	        		<tr>
+						<td>
+							<h4>How helpful is this document?</h4>
+				        	<div id="star_group" role="radiogroup" aria-required="true">
+				                <label> 
+				                    <input class="radio" type="radio" name="helped" value="1" /> Very helpful
+				                </label><br />
+				                <label> 
+				                    <input class="radio" type="radio" name="helped" value="2" /> Somewhat helpful
+				                </label><br />
+				                <label>
+				                    <input class="radio" type="radio" name="helped" value="3" /> Not helpful
+				                </label><br />
+				            </div>
+						</td>
+						<td>
+							<h4>How can we improve this document?</h4>
+				            <div id="improve">
+				                <label>
+				                    <input type="checkbox" name="typo" /> Fix typos or links
+				                </label><br />
+				                <label>
+				                    <input type="checkbox" name="infoIncorrect" /> Fix incorrect information
+				                </label><br />
+				                <label>
+				                    <input type="checkbox" name="needs_examples" /> Add or update code samples
+				                </label><br />
+				                <label>
+				                    <input type="checkbox" name="needs_art" /> Add or update illustrations
+				                </label><br />
+				            </div>
+						</td>
+					</tr>
+					<tr>
+						<td colspan="2">
+							<br />
+							<textarea id="comment" name="problem" cols="70" rows="8" placeholder="Please tell us more about your experience with this document" data-asterisk="a2" required></textarea>
+						</td>
+					</tr>
+	        	</table>
+	        	
+
+	            
+	            <input type="submit" value="Submit" />
+	            <input type="button" value="Cancel" onclick="tooltip.hide()" />
+	        </form>
+	    </div>
+	</div>
+
     <a href="#top" class="scrollup">Scroll</a>
 
     <footer class="global">
         <div class="footer-nav">
             {{#is lang "ja"}}
                 <a id="footer-nav-feedback" href="javascript:void(0)" onclick="switchLanguage('{{lang}}','en')">English</a>
-                <a href="https://ja.monaca.io/service/" id="footer-nav-feedback">Feedback</a>
+                <!-- <a href="https://ja.monaca.io/service/" id="footer-nav-feedback">Feedback</a> -->
+                <a id="footer-nav-feedback" href="#" onclick="tooltip.pop(this, '#demo3_tip', {overlay:true, position:4}); return false;">Feedback</a>
             {{else}}
                 <a id="footer-nav-feedback" href="javascript:void(0)" onclick="switchLanguage('{{lang}}','ja')">日本語版</a>
-                <a href="https://monaca.io/service/" id="footer-nav-feedback">Feedback</a>
+                <!-- <a href="https://monaca.io/service/" id="footer-nav-feedback">Feedback</a> -->
+                <a id="footer-nav-feedback" href="#" onclick="tooltip.pop(this, '#demo3_tip', {overlay:true, position:4}); return false;">Feedback</a>
             {{/is}}
         </div>
         <p class="copyright">Copyright &copy; 2011-2016 Asial Corporation. All rights reserved.</p>
